update project info

--- a/.gitignore
+++ b/.gitignore
@@ -361,9 +361,9 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
-/install/CrossDownloader_setup_0.4.0.zip
-/install/CrossDownloader_setup_0.4.1.zip
-/install/CrossDownloader_setup_0.4.6.zip
-/install/CrossDownloader_setup.exe
+install/
+Release/
+CrossDownloader-Extension/
 /CrossDownloader/CrossDownloader.vcxproj
 /CrossDownloader/CrossDownloader.vcxproj.filters
+
